// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon it works with all icons names 1`] = `
<div>
  <svg
    class="Icon Icon--md"
    enable-background="new 0 0 24 24"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.4 15.5L12 7.1l-8.4 8.4L5 16.9l7-7 7 7z"
    />
  </svg>
  <svg
    class="Icon Icon--md"
    enable-background="new 0 0 24 24"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.5 20.4l8.4-8.4-8.4-8.4L7.1 5l7 7-7 7z"
    />
  </svg>
  <svg
    class="Icon Icon--md"
    enable-background="new 0 0 24 24"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.4 8.5L12 16.9 3.6 8.5 5 7.1l7 7 7-7z"
    />
  </svg>
  <svg
    class="Icon Icon--md"
    enable-background="new 0 0 24 24"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15.5 20.4L7.1 12l8.4-8.4L16.9 5l-7 7 7 7z"
    />
  </svg>
</div>
`;

exports[`Icon it works with all icons sizes 1`] = `
<div>
  <svg
    class="Icon Icon--sm"
    enable-background="new 0 0 24 24"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.4 15.5L12 7.1l-8.4 8.4L5 16.9l7-7 7 7z"
    />
  </svg>
  <svg
    class="Icon Icon--md"
    enable-background="new 0 0 24 24"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.4 15.5L12 7.1l-8.4 8.4L5 16.9l7-7 7 7z"
    />
  </svg>
  <svg
    class="Icon Icon--lg"
    enable-background="new 0 0 24 24"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.4 15.5L12 7.1l-8.4 8.4L5 16.9l7-7 7 7z"
    />
  </svg>
  <svg
    class="Icon Icon--xl"
    enable-background="new 0 0 24 24"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.4 15.5L12 7.1l-8.4 8.4L5 16.9l7-7 7 7z"
    />
  </svg>
</div>
`;
